--- a/Pilot.html
+++ b/Pilot.html
@@ -91,7 +91,8 @@ footer{margin:42px 0 30px;color:var(--muted);font-size:14px}
 </head>
 <body>
   <div id="banner" style="position:sticky;top:0;width:100%;background:#00c68f;color:#0b0f14;text-align:center;padding:8px 0;font-weight:700;font-size:15px;z-index:99">
-  🚀 Nur 5 Plätze im Tenra-Pilot 2025 – Start am 1. Dezember • Jetzt bewerben
+  🚀 Nur 3 Plätze im Tenra-Pilot 2026 – Start am 6. Januar • Jetzt bewerben
+
 </div>
 
   <nav class="nav">
@@ -121,7 +122,8 @@ footer{margin:42px 0 30px;color:var(--muted);font-size:14px}
     Jede Minute Chaos, Rückfrage oder Fehlabsprache kostet bares Geld.  
     <b>Tenra</b> schafft Klarheit – ohne Schulung, ohne Aufwand.  
     <br><br>
-    <span style="color:#00c68f">Pilotstart am 1. Dezember 2025 • Nur 5 Plätze</span>
+    <span style="color:#00c68f">Pilotstart am 6. Januar 2026 • Nur 3 Plätze</span>
+
   </p>
 </section>
 
@@ -180,10 +182,10 @@ footer{margin:42px 0 30px;color:var(--muted);font-size:14px}
     <section id="teilnahme" class="card card-pad" style="margin-top:28px">
   <h3 style="margin:0 0 8px;font-size:18px">Pilotphase & Teilnahme</h3>
   <ul class="list">
-    <li class="li">📅 Start: <b>1. Dezember 2025</b> – nur 5 Betriebe im ersten Durchlauf</li>
-    <li class="li">⏳ Laufzeit: <b>3 bis 6 Monate</b> gemeinsame Optimierung im Echtbetrieb</li>
+    <li class="li">📅 Start: <b>6. Januar 2026</b> – nur 3 Betriebe im ersten Durchlauf</li>
+    <li class="li">⏳ Laufzeit: <b>8 Wochen</b> klare Ergebnisse im Echtbetrieb</li>
     <li class="li">💸 Teilnahmegebühr: <b>0 € (komplett von Tenra übernommen)</b></li>
-    <li class="li">📊 Zielwerte: <b>–25 % Kommunikationszeit • +100 % Transparenz</b></li>
+    <li class="li">📊 Zielwerte: <b>–20 % Kommunikationszeit • +200 % Übersicht</b></li>
     <li class="li">🤝 Ausstieg jederzeit möglich – kein Vertrag, kein Risiko</li>
   </ul>
   <div class="note" style="margin-top:12px">
